# desafio-1-1s-vs-3j_resposta-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md  Rocket.toml  TODO.md
samples/: usuarios_10.json
src/: main.rs
